--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "express-joi-validation": "^0.2.1",
+    "express-joi-validator": "^2.0.0",
     "http-errors": "~1.6.2",
     "joi": "^13.3.0",
     "mongoose": "^5.0.17",
