--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.1",
+    "connect-mongodb-session": "^2.0.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
