--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.8.2",
     "nodemon": "^1.17.4"
   }
 }
