--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "seed" : "node ./seeds/seed.development.js",
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
