--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "seed" : "node ./seeds/seed.development.js",
+    "seed": "node ./seeds/seed.development.js",
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "joi": "^13.3.0",
+    "lodash": "^4.17.10",
     "mongoose": "^5.0.18",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
