--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "joi": "^6.10.1",
     "mongoose": "^5.0.18",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
