--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
+    "diff": "^3.5.0",
     "express": "~4.16.0",
     "express-joi-validator": "^2.0.0",
     "express-session": "^1.15.6",
