--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "seed": "node ./seeds/seed.development.js",
-    "watch": "nodemon ./bin/www"
+    "watch": "nodemon ./bin/www",
+    "debug": "nodemon --inspect ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^2.0.1",
